# mail-tracker-drf

./: .dockerignore  .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TODO.md  docker-compose.yaml  gunicorn_conf.py  main.py  pyproject.toml  requirements.txt
attachments/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
attachments/migrations/: 0001_initial.py
common_library/: env.py  fields.py  model.py  pagination.py
common_library/db/: __init__.py  fields.py  model.py
core/: celery.py  settings.py  urls.py
mailer/: __init__.py  admin.py  models.py  mongodb_models.py  serializers.py  tasks.py  urls.py  views.py
mailer/migrations/: 0001_initial.py
scripts/: celeryBeat.bat  celeryBeat.sh  celeryBeatWorker.sh  celeryWorker.bat  celeryWorker.sh  setup_migration.sh  start_web.sh
tracking/: urls.py  views.py
